--- a/GoodExchangeApplication/MyRazorPage/Pages/Account/register.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/Account/register.cshtml
@@ -34,31 +34,31 @@
                             <div class="input-field">
                                 <label class="control-label">FullName</label>
                                 <br />
-                                <input class="input" type="text" name="FullName"  required />
+                                <input class="input" type="text" name="txtUserName"  required />
                                 <span  class="text-danger"></span>
                             </div>
                             <div class="input-field">
                                 <label class="control-label">Email</label>
                                 <br />
-                                <input class="input" type="email" name="Email" required />
+                                <input class="input" type="email" name="txtEmail" required />
                                 <span class="text-danger"></span>
                             </div>
                             <div class="input-field">
                                 <label class="control-label">Password</label>
                                 <br />
-                                <input class="input" type="password" name="Password" required />
+                                <input class="input" type="password" name="txtPassword" required />
                                 <span  class="text-danger"></span>
                             </div>
                             <div class="input-field">
                                 <label class="control-label">Telephone</label>
                                 <br />
-                                <input class="input" type="tel" name="Telephone"  required />
+                                <input class="input" type="tel" name="txtTelephone"  required />
                                 <span  class="text-danger"></span>
                             </div>
                             <div class="input-field">
                                 <label class="control-label">Address</label>
                                 <br />
-                                <input class="input" type="text" name="Address"  required />
+                                <input class="input" type="text" name="txtAddress"  required />
                                 <span  class="text-danger"></span>
                             </div>
                             <div class="form-group text-danger">
