--- a/GoodExchangeApplication/MyRazorPage/Pages/Seller/CreateProduct.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/Seller/CreateProduct.cshtml
@@ -32,7 +32,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="requestProduct.CategoryId" class="control-label"></label>
-                <select asp-for="requestProduct.CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
+                <select asp-for="requestProduct.CategoryId" class="form-control" asp-items="ViewBag.Id"></select>
             </div>
             <div class="form-group">
                 <label asp-for="requestProduct.Description" class="control-label"></label>
