--- a/GoodExchangeApplication/MyRazorPage/Pages/CustomerHistory/UserProfile.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/CustomerHistory/UserProfile.cshtml
@@ -69,21 +69,31 @@
                             <h4 class="text-right">Profile Settings</h4>
                         </div>
                         <form asp-page-handler="UpdateProfile" method="post">
+                            <input type="hidden" name="txtUserId" value="@json.Id"/>
                             <div class="row mt-3">
-                                <div class="col-md-12"><label class="labels">Email</label><input type="text" class="form-control" placeholder="enter phone number" value="@json.Email" required></div>
-                                <div class="col-md-12"><label class="labels">UserName</label><input type="text" class="form-control" placeholder="enter address line 1" value="@json.UserName" required></div>
-                                <div class="col-md-12"><label class="labels">Password </label><input type="text" class="form-control" placeholder="enter address line 2" value="@json.Password" required></div>
-                                <div class="col-md-12"><label class="labels">Telephone</label><input type="tel" class="form-control" placeholder="enter address line 2" value="@json.TelephoneNumber" required></div>
-                                <div class="col-md-12"><label class="labels">Address</label><input type="text" class="form-control" placeholder="enter address line 2" value="@json.Address" required></div>
-
+                                <div class="col-md-12"><label class="labels">Email</label><input type="text" name="txtEmail" class="form-control" placeholder="enter phone number" value="@json.Email" required></div>
+                                <div class="col-md-12"><label class="labels">UserName</label><input type="text" name="txtUserName" class="form-control" placeholder="enter address line 1" value="@json.UserName" required></div>
+                                <div class="col-md-12"><label class="labels">Password </label><input type="password" name="txtPassword" class="form-control" placeholder="enter address line 2" value="@json.Password" required></div>
+                                <div class="col-md-12"><label class="labels">Telephone</label><input type="tel" name="txtTelephone" class="form-control" placeholder="enter address line 2" value="@json.TelephoneNumber" required></div>
+                                <div class="col-md-12"><label class="labels">Address</label><input type="text" name="txtAddress" class="form-control" placeholder="enter address line 2" value="@json.Address" required></div>
                             </div>
-                            <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button">Save Profile</button></div>
+                            <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="submit">Save Profile</button></div>
                         </form>
+                        <div class="mt-3 text-center">
+                            @if (TempData["SuccessMessage"] != null)
+                            {
+                                <div class="alert alert-success">
+                                    @TempData["SuccessMessage"]
+                                </div>
+                            }
+                            @if (TempData["ErrorMessage"] != null)
+                            {
+                                <div class="alert alert-danger">
+                                    @TempData["ErrorMessage"]
+                                </div>
+                            }
+                        </div>
                         
-                        @* <div class="row mt-3">
-                            <div class="col-md-6"><label class="labels">Country</label><input type="text" class="form-control" placeholder="country" value=""></div>
-                            <div class="col-md-6"><label class="labels">State/Region</label><input type="text" class="form-control" value="" placeholder="state"></div>
-                        </div> *@
                        
                     </div>
                 </div>
