--- a/GoodExchangeApplication/MyRazorPage/Pages/CustomerHistory/ViewTransactionDetails.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/CustomerHistory/ViewTransactionDetails.cshtml
@@ -2,9 +2,8 @@
 @model MyRazorPage.Pages.CustomerHistory.ViewTransactionDetailsModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
-    Layout = null;
+    
 }
-
 
 <!DOCTYPE html>
 <html lang="en">
@@ -44,11 +43,7 @@
             padding: 20px;
         }
 
-        .table th {
-            background-color: #e9ecef;
-        }
-
-        .table td, .table th {
+        .table th, .table td {
             vertical-align: middle;
         }
 
@@ -71,6 +66,12 @@
             background-color: #f8d7da;
             color: #721c24;
         }
+
+        .product-image {
+            width: 100px;
+            height: 100px;
+            object-fit: cover;
+        }
     </style>
 </head>
 <body>
@@ -79,91 +80,33 @@
 
         <div class="card">
             <div class="card-header">
-                <h4 class="mb-0">Transaction Details</h4>
+                <h4 class="mb-0">Product Details</h4>
             </div>
             <div class="card-body">
-                <div class="row mb-4">
-                    <div class="col-md-6">
-                        <h5>Transaction Summary</h5>
-                        <table class="table">
+                <div class="row">
+                    <div class="col-md-12">
+                        <table class="table table-bordered">
+                            <thead>
+                                <tr>
+                                    <th>Image</th>
+                                    <th>Product Name</th>
+                                    <th>Description</th>
+                                    <th>Price</th>
+                                </tr>
+                            </thead>
                             <tbody>
-                                <tr>
-                                    <th scope="row">Transaction ID:</th>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">Date:</th>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">Status:</th>
-                                    <td>
-                                      @*   @if (Model.Transaction.Status == 1)
-                                        {
-                                            <span class="badge bg-warning text-dark">Pending</span>
-                                        }
-                                        else if (Model.Transaction.Status == 2)
-                                        {
-                                            <span class="badge bg-success">Completed</span>
-                                        } *@
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">Total Amount:</th>
-                                    <td></td>
-                                </tr>
+                                @foreach (var product in Model.ProductDTos)
+                                {
+                                    <tr>
+                                        <td><img src="@product.Image" alt="@product.Title" class="product-image" /></td>
+                                        <td>@product.Title</td>
+                                        <td>@product.Description</td>
+                                        <td>$ @product.Price</td>
+                                    </tr>
+                                }
                             </tbody>
                         </table>
                     </div>
-                    <div class="col-md-6">
-                        <h5>Payment Information</h5>
-                        <table class="table">
-                            <tbody>
-                               @*  <tr>
-                                    <th scope="row">Payment Method:</th>
-                                    <td>@Model.Transaction.PaymentMethod</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">Payment Status:</th>
-                                    <td>
-                                        @if (Model.Transaction.PaymentStatus == "Success")
-                                        {
-                                            <span class="badge bg-success">Success</span>
-                                        }
-                                        else
-                                        {
-                                            <span class="badge bg-danger">Failed</span>
-                                        }
-                                    </td>
-                                </tr> *@
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-
-                <h5>Item Details</h5>
-                <div class="table-responsive">
-                    <table class="table table-hover">
-                        <thead>
-                            <tr>
-                                <th>Item Name</th>
-                                <th>Quantity</th>
-                                <th>Unit Price</th>
-                                <th>Total Price</th>
-                            </tr>
-                        </thead>
-                        <@* tbody>
-                            @foreach (var item in Model.TransactionItems)
-                            {
-                                <tr>
-                                    <td>@item.Name</td>
-                                    <td>@item.Quantity</td>
-                                    <td>$@item.UnitPrice</td>
-                                    <td>$@item.TotalPrice</td>
-                                </tr>
-                            } *@
-                        </tbody>
-                    </table>
                 </div>
             </div>
         </div>
@@ -172,5 +115,3 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
-
