--- a/GoodExchangeApplication/MyRazorPage/Pages/Seller/CreateProduct.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/Seller/CreateProduct.cshtml
@@ -5,6 +5,20 @@
     ViewData["Title"] = "Create";
     Layout = "/Pages/Shared/_layout.cshtml";
 }
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+    <script>
+        function previewImage(event) {
+            var reader = new FileReader();
+            reader.onload = function () {
+                var output = document.getElementById('imagePreview');
+                output.src = reader.result;
+                output.style.display = 'block';
+            };
+            reader.readAsDataURL(event.target.files[0]);
+        }
+    </script>
+}
 <h1>Create</h1>
 @if (ViewData["Message"] != null)
 {
@@ -26,7 +40,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             <div class="form-group">
                 <label asp-for="requestProduct.Title"></label>
                 <input asp-for="requestProduct.Title" />
@@ -53,8 +67,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="requestProduct.Image"></label>
-                <input asp-for="requestProduct.Image" />
-                <span asp-validation-for="requestProduct.Image" class="text-danger"></span>
+                <input asp-for="requestProduct.Image" type="file" class="form-control" onchange="previewImage(event)" />
+                <img id="imagePreview" src="#" alt="Image Preview" style="display:none; width: 100px; height: 100px;" />
             </div>
             <div class="form-group">
                 <label asp-for="requestProduct.Quantity"></label>
