--- a/GoodExchangeApplication/MyRazorPage/Pages/Seller/UpdateProduct.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/Seller/UpdateProduct.cshtml
@@ -5,6 +5,20 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @model MyRazorPage.Pages.Seller.UpdateProductModel
 
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+    <script>
+        function previewImage(event) {
+            var reader = new FileReader();
+            reader.onload = function () {
+                var output = document.getElementById('imagePreview');
+                output.src = reader.result;
+                output.style.display = 'block';
+            };
+            reader.readAsDataURL(event.target.files[0]);
+        }
+    </script>
+}
 <h1>Update</h1>
 @if (ViewData["Message"] != null)
 {
@@ -55,11 +69,11 @@
                     <input asp-for="requestProduct.Location" />
                     <span asp-validation-for="requestProduct.Location" class="text-danger"></span>
                 </div>
-                <div class="form-group">
-                    <label asp-for="requestProduct.Image"></label>
-                    <input asp-for="requestProduct.Image" />
-                    <span asp-validation-for="requestProduct.Image" class="text-danger"></span>
-                </div>
+            <div class="form-group">
+                <label asp-for="requestProduct.Image"></label>
+                <input asp-for="requestProduct.Image" type="file" class="form-control" onchange="previewImage(event)" />
+                <img id="imagePreview" src="#" alt="Image Preview" style="display:none; width: 100px; height: 100px;" />
+            </div>
                 <div class="form-group">
                     <label asp-for="requestProduct.Quantity"></label>
                     <input asp-for="requestProduct.Quantity" />
